[package]
name = "dtls"
version = "0.1.0"
authors = ["smb123"]
edition = "2021"
description = "Library for working with Smash 4 DTLS Extration"

[profile.release]
strip = true  # Automatically strip symbols from the binary.
opt-level = "z"  # Optimize for size.
lto = true
codegen-units = 1
panic = "abort"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[[bin]]
name = "dtls"
path = "src/main.rs"


[dependencies]
binrw = "0.8.4"
flate2 = "1.0.20"
crc32fast = "1.2"
modular-bitfield = "0.11.2"
clap = { version = "3.1.12", features = ["derive"] }
rayon = "1.5.2"

