[package]
name = "dtls"
version = "0.1.0"
authors = ["smb123"]
edition = "2021"
description = "Library for working with Smash 4 DTLS Extration"

[profile.release]
strip = true
lto = true
codegen-units = 1

[[bin]]
name = "dtls"
path = "src/main.rs"

[dependencies]
binrw = "0.14.1"
zune-inflate = "0.2.54"
crc32fast = "1.2"
modular-bitfield = "0.11.2"
clap = { version = "4.5.28", features = ["derive"] }
rayon = "1.5.2"
